{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 396,
  "lineage": "c6b6ade2-05fb-60a7-417b-38e28630c624",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:862721235140:vpc/vpc-068e97ca7832c5559",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07c1ae5dc5f21d982",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0aa846bdf256a5c45",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068e97ca7832c5559",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ec4348302e827a99",
            "owner_id": "862721235140"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:862721235140:security-group/sg-032a4a7c38b6012bc",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to VPC endpoints",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032a4a7c38b6012bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Allow all traffic from VPC endpoints",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "bytefaenger-vpc-endpoints",
            "name_prefix": "",
            "owner_id": "862721235140",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068e97ca7832c5559"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecr_api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:862721235140:vpc-endpoint/vpce-0201f23c0be06d284",
            "dns_entry": [
              {
                "dns_name": "vpce-0201f23c0be06d284-vthqh5gu.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0201f23c0be06d284-vthqh5gu-eu-central-1a.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0201f23c0be06d284-vthqh5gu-eu-central-1b.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0201f23c0be06d284-vthqh5gu-eu-central-1c.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "api.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0417744280L3DRY3KZKS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0201f23c0be06d284",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0014004c7d25e17e7",
              "eni-045e90b9a5162783c",
              "eni-09a2f784a410d5df1"
            ],
            "owner_id": "862721235140",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-032a4a7c38b6012bc"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-03c602e5543d4e132",
              "subnet-03c855ad2126e853f",
              "subnet-04506897639174603"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068e97ca7832c5559"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_region.current",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "ecr_dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:862721235140:vpc-endpoint/vpce-029ae14cc32f1c7bc",
            "dns_entry": [
              {
                "dns_name": "vpce-029ae14cc32f1c7bc-0lymqvc7.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-029ae14cc32f1c7bc-0lymqvc7-eu-central-1a.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-029ae14cc32f1c7bc-0lymqvc7-eu-central-1b.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-029ae14cc32f1c7bc-0lymqvc7-eu-central-1c.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0385434335BGODRYXBVO"
              },
              {
                "dns_name": "*.dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0385434335BGODRYXBVO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-029ae14cc32f1c7bc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03aefdaecd02ce938",
              "eni-08aae9ffa2b23bd20",
              "eni-0bbc1cac78b39b37e"
            ],
            "owner_id": "862721235140",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-032a4a7c38b6012bc"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-03c602e5543d4e132",
              "subnet-03c855ad2126e853f",
              "subnet-04506897639174603"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068e97ca7832c5559"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_region.current",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:862721235140:vpc-endpoint/vpce-0edf76ee05b04fe2a",
            "dns_entry": [
              {
                "dns_name": "vpce-0edf76ee05b04fe2a-nhvneecr.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0edf76ee05b04fe2a-nhvneecr-eu-central-1a.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0edf76ee05b04fe2a-nhvneecr-eu-central-1b.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0edf76ee05b04fe2a-nhvneecr-eu-central-1c.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "logs.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z03850733DE8VP99OP2EF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0edf76ee05b04fe2a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a49dd52fff856fed",
              "eni-0ac2a1b4248e6a22b",
              "eni-0d3a61c2ff5b45c03"
            ],
            "owner_id": "862721235140",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-032a4a7c38b6012bc"
            ],
            "service_name": "com.amazonaws.eu-central-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-03c602e5543d4e132",
              "subnet-03c855ad2126e853f",
              "subnet-04506897639174603"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068e97ca7832c5559"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_region.current",
            "data.aws_subnets.main",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:862721235140:vpc-endpoint/vpce-04c5ee04af733d641",
            "cidr_blocks": [
              "52.219.44.0/22",
              "52.219.208.0/22",
              "3.5.136.0/22",
              "52.219.218.0/24",
              "52.219.140.0/24",
              "16.12.32.0/22",
              "52.219.72.0/22",
              "3.5.134.0/23",
              "16.12.24.0/21",
              "52.219.168.0/22"
            ],
            "id": "vpce-04c5ee04af733d641",
            "owner_id": "862721235140",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ea54007",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.eu-central-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-068e97ca7832c5559"
          },
          "dependencies": [
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:862721235140:loadbalancer/app/bytefaenger/8adaecc7702912d0",
            "arn_suffix": "app/bytefaenger/8adaecc7702912d0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "bytefaenger-611562847.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:862721235140:loadbalancer/app/bytefaenger/8adaecc7702912d0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bytefaenger",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c6f1638987c54a5b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03c602e5543d4e132"
              },
              {
                "subnet_id": "subnet-03c855ad2126e853f"
              },
              {
                "subnet_id": "subnet-04506897639174603"
              }
            ],
            "subnets": [
              "subnet-03c602e5543d4e132",
              "subnet-03c855ad2126e853f",
              "subnet-04506897639174603"
            ],
            "tags": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-068e97ca7832c5559",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "data.aws_subnets.main",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http-https-redirect",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:862721235140:listener/app/bytefaenger/8adaecc7702912d0/fb097d6391e08fa0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:862721235140:listener/app/bytefaenger/8adaecc7702912d0/fb097d6391e08fa0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:862721235140:loadbalancer/app/bytefaenger/8adaecc7702912d0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_route53_zone.main",
            "data.aws_subnets.main",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:862721235140:listener/app/bytefaenger/8adaecc7702912d0/9c51ea33a37e5c57",
            "certificate_arn": "arn:aws:acm:eu-central-1:862721235140:certificate/70cbbbba-2cab-4ca9-9381-a81ac768bf3a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:862721235140:targetgroup/ecs-bytefaenger/fe8eb372d6d849cd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:862721235140:listener/app/bytefaenger/8adaecc7702912d0/9c51ea33a37e5c57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:862721235140:loadbalancer/app/bytefaenger/8adaecc7702912d0",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-Res-2021-06",
            "tags": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_route53_zone.main",
            "data.aws_subnets.main",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:862721235140:targetgroup/ecs-bytefaenger/fe8eb372d6d849cd",
            "arn_suffix": "targetgroup/ecs-bytefaenger/fe8eb372d6d849cd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:862721235140:targetgroup/ecs-bytefaenger/fe8eb372d6d849cd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-bytefaenger",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-068e97ca7832c5559"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:862721235140:security-group/sg-0c6f1638987c54a5b",
            "description": "Security group for bytefaenger application load balancer",
            "egress": [],
            "id": "sg-0c6f1638987c54a5b",
            "ingress": [],
            "name": "bytefaenger-20231215202840303500000001",
            "name_prefix": "bytefaenger-",
            "owner_id": "862721235140",
            "revoke_rules_on_delete": false,
            "tags": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-068e97ca7832c5559"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:862721235140:security-group-rule/sgr-0cd6f495ed0bd82dc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow all traffic to ECS",
            "from_port": null,
            "id": "sgr-0cd6f495ed0bd82dc",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b06b18dcc3bcd953",
            "security_group_id": "sg-0c6f1638987c54a5b",
            "security_group_rule_id": "sgr-0cd6f495ed0bd82dc",
            "tags": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.main",
            "module.alb.aws_security_group.this",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:862721235140:security-group-rule/sgr-0e65d3a897a416eea",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP web traffic",
            "from_port": 80,
            "id": "sgr-0e65d3a897a416eea",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c6f1638987c54a5b",
            "security_group_rule_id": "sgr-0e65d3a897a416eea",
            "tags": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this"
          ]
        },
        {
          "index_key": "all_https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:862721235140:security-group-rule/sgr-04b9dd87f5a077283",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS web traffic",
            "from_port": 443,
            "id": "sgr-04b9dd87f5a077283",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c6f1638987c54a5b",
            "security_group_rule_id": "sgr-04b9dd87f5a077283",
            "tags": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "application-name": "bytefaenger",
              "terraform-aws-modules": "alb"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:862721235140:subnet/subnet-03c855ad2126e853f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c855ad2126e853f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862721235140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-068e97ca7832c5559"
          }
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:862721235140:security-group/sg-0b06b18dcc3bcd953",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b06b18dcc3bcd953",
            "ingress": [],
            "name": "bytefaenger-20231215202840642200000007",
            "name_prefix": "bytefaenger-",
            "owner_id": "862721235140",
            "revoke_rules_on_delete": false,
            "tags": {
              "application-name": "bytefaenger"
            },
            "tags_all": {
              "application-name": "bytefaenger"
            },
            "timeouts": null,
            "vpc_id": "vpc-068e97ca7832c5559"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.main",
            "module.ecs_service.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2448629545",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b06b18dcc3bcd953",
            "security_group_rule_id": "sgr-0e8812e71c1f5cc5d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.main",
            "module.alb.aws_security_group.this",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ingress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2337318054",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b06b18dcc3bcd953",
            "security_group_rule_id": "sgr-0dd19ae8ecd516612",
            "self": false,
            "source_security_group_id": "sg-0c6f1638987c54a5b",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.main",
            "module.alb.aws_security_group.this",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}